# load-testing-of-api-server

./: README.md
locust-server/: Dockerfile  docker-compose.yml
locust-server/scripts/: input_data.py  load_test_grpc_script.py  load_test_script.py  onnxGrpcServer_pb2.py  onnxGrpcServer_pb2_grpc.py
prediction_server/docker/fastapi_server/: Dockerfile  docker-compose.yml  requirements.txt  test.sh
prediction_server/docker/fastapi_server/app/: api.py  config.py  main.py  models.py  predict.py  prediction.py  security.py
prediction_server/docker/grpc_cpp/: Dockerfile.app  Dockerfile.ecs  Dockerfile.minimum  docker-compose.yml
prediction_server/docker/grpc_cpp/app/cmake/: GRPCHelper.cmake  common.cmake
prediction_server/docker/grpc_cpp/app/protos/: onnxserver.proto  onnxserver.proto.old  sample.proto
prediction_server/docker/grpc_cpp/app/src/onnxserver/: CMakeLists.txt  classifier.cpp  client.cpp  server.cpp
prediction_server/docker/grpc_cpp/app/src/sample/: CMakeLists.txt  grpc_client.cpp  grpc_server.cpp
prediction_server/docker/grpc_cpp/models/: pipeline.onnx
prediction_server/docker/grpc_python/: Dockerfile.server  docker-compose.yml  requirements.txt
prediction_server/docker/grpc_python/app/ml/: client.py  config.py  generate_code.py  input_data.py  model.py  server.py
prediction_server/docker/onnruntime_server/: Dockerfile.python.server.dep  Dockerfile.server  install_server_deps.sh  install_ubuntu.sh  prediction_service_impl.h
